fixed the cards spacing

--- a/sentify/website/static/company_search.css
+++ b/sentify/website/static/company_search.css
@@ -740,30 +740,6 @@
     width: 703px;
 }
 
-.rectangle-13-rptxkZ {
-    background-color: var(--black);
-    border: 1px solid;
-    border-color: var(--black);
-    border-radius: 30px;
-    height: 46px;
-    left: 492px;
-    position: absolute;
-    top: 1484px;
-    width: 107px;
-}
-
-.rectangle-14-rptxkZ {
-    background-color: transparent;
-    border: 1px solid;
-    border-color: var(--black);
-    border-radius: 30px;
-    height: 46px;
-    left: 291px;
-    position: absolute;
-    top: 1484px;
-    width: 201px;
-}
-
 .followed-rptxkZ {
     background-color: transparent;
     color: var(--white);
@@ -822,7 +798,7 @@
     position: absolute;
     top: 1490px;
     width: 25px;
-}
+} 
 
 .ellipse-988-rptxkZ {
     background-color: #26beff;
@@ -1208,7 +1184,7 @@
     background-color: var(--alabaster);
     border: 1px solid;
     left: 0px;
-    position: absolute;
+    position: relative;
     top: 0px;
     height: 400px;
     
@@ -1266,8 +1242,40 @@
     height: 402px;
     width: 400px;
     background-color: pink;
-    display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center;
 }
 
+.full-analytics {
+    background-color: transparent;
+    border: 1px solid;
+    border-color: black;
+    border-radius: 30px;
+    height: 46px;
+    width: 210px;
+    left: 30px;
+    bottom: 10px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto";
+    font-size: 15px;
+}
+
+.followed-button {
+    background-color: black;
+    border: 2px solid;
+    border-color: black;
+    border-radius: 30px;
+    height: 46px;
+    position: relative;
+    width: 120px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto";
+    font-size: 15px;
+    color: white;
+    left: 240px;
+    bottom: 10px;
+
+}
